# dmrgpy

./: .gitignore  .gitignore.swp  CLAUDE.md  README.md  addsystem.py  clean.py  contributors.txt  install.py  install.sh  install_julia.py  install_julia.sh  pyproject.toml  roadmap.md  run_tests.py  update.sh
compile/: juliacompile.jl
docs/: documentation.md  documentation.tex  user_guide.md  user_guide.tex
examples/: addpath.py  replace_string.py
examples/1dIsing/: main.py
examples/1dIsing_correlator/: main.py
examples/AF_SC_interface/: main.py
examples/GS_enforce_maximum_fluctuation/: main.py
examples/Haldane_chain/: main.py
examples/Heisenberg_VS_Hubbard_dynamic/: main.py
examples/Heisenberg_VS_Hubbard_static/: main.py
examples/Hubbard_correlator_VS_size/: main.py
examples/IsingDM/: main.py
examples/MPS_VS_ED/: main.py
examples/MPS_VS_ED_examples/: main.py
examples/SYK_chain/: main.py
examples/UV_chain/: main.py
examples/XXZ_correlator/: main.py
examples/abstract_algebra/: main.py
examples/analytic_continuation/: main.py
examples/anisotropic_heisenberg_S1/: main.py
examples/anisotropic_spins/: main.py
examples/apply_inverse/: main.py
examples/arnoldi_benchmark/: main.py
examples/arnoldi_ground_state/: main.py
examples/attractive_hubbard/: main.py
examples/backend_switch_consistency/: main.py
examples/backend_timing_gs_energy/: main.py
examples/berry_lutchin/: main.py
examples/bilinear_biquadratic/: main.py
examples/boson_maxnb_v3_VS_ED/: main.py
examples/bosonic_chain/: main.py
examples/bosonic_hubbard/: main.py
examples/central_charge_critical/: main.py
examples/chain_correlation/: GS_ENERGY.OUT  MEASURE_SX.OUT  MEASURE_SY.OUT  MEASURE_SZ.OUT  correlators.in  main.py  psi_GS.dmrg  sites.dmrg  status.txt  tasks.in
examples/chain_ordered/: main.py
examples/charge_gap/: main.py
examples/classicdmrg/: main.py
examples/comparison_dmrg/: main.py
examples/constrain_density/: main.py
examples/convergence_excited_states/: main.py
examples/correlation_entropy/: main.py
examples/correlation_matrix/: main.py
examples/correlation_matrix_python_VS_CPP/: main.py
examples/correlation_matrix_spinless/: main.py
examples/correlator_ising/: main.py
examples/correlator_spinless_fermion/: main.py
examples/correlator_time_evolution/: main.py
examples/dcf_dimerized_heisenberg/: .main.py.swp  DCF.OUT  SPISPJ.OUT  dcf.vsz  main.py  status.txt
examples/dcf_haldane/: DOS.OUT  DOS_KPM_SCALE.OUT  GS_ENERGY.OUT  KPM_MOMENTS.OUT  couplings.in  dcf.vsz  main.py  sites.in  status.txt  tasks.in
examples/density_VS_mu/: main.py
examples/density_density_correlator/: main.py
examples/density_matrix/: main.py
examples/dimer/: main.py
examples/dimer_site/: main.py
examples/dimerized_chain/: CORRELATORS.OUT  GS_ENERGY.OUT  MEASURE_SX.OUT  MEASURE_SY.OUT  MEASURE_SZ.OUT  SWEEP.OUT  correlators.in  couplings.in  (+5 more)
install/: addsystem.py  cppversion.py  install.py  install2.py  juliainstall.jl  old_install.sh
installtk/: __init__.py  addpythonpath.py  addsystem.py  autoinstallubuntu.py  blaslapack.py  cppversion.py  install2.py  install3.py  requirements.py
jupyter-notebooks/: Julia_VS_CPP.ipynb
src/: .kpmdmrg.py.swp  .spinchain.py.swp  dos.py  fermionchain.py  kondochain.py  kpmdmrg.py  manybodychain.py  meanfield.py  mps.py  operatornames.py  pychainwrapper.py  spinchain.py  taskdmrg.py  timedependent.py  topology.py  writemps.py
tests/: _dense_jw_reference.py  _helpers.py  conftest.py  reference_data.py  test_benchmarks.py  test_boson_chain.py  test_dynamical_correlator.py  test_entanglement.py  test_excited_states.py  test_fermion_chain.py  test_four_point_correlator.py  test_four_point_correlator_spinful_native.py  test_internal_consistency.py  test_jordan_wigner.py  test_julia_live.py  test_kondo_spectrum.py  test_kondo_spectrum_dmrgtwotime.py  test_kondo_spectrum_potentialdc.py  test_kondo_spectrum_secondorder_dc.py  test_kondo_spectrum_twotime.py  test_long_chain.py  test_mixed_chain.py  test_nh_dmrg.py  test_parafermion_chain.py  test_spin_chain.py  test_spin_operators.py  test_spinful_fermion_chain.py  test_spinful_fermion_chain_native.py  test_time_evolution.py
uniitest/: test_classic_dmrg.py
(+1205 files in other folders)
